--- a/form-project/style.css
+++ b/form-project/style.css
@@ -73,6 +73,29 @@ label {
     margin: 20px 0 5px 0;
     font-size: 1.3rem;
 }
+span {
+    position: relative;
+}
+input {
+    appearance: none;
+    outline: none;
+    border-radius: 4px;
+    border: 1px solid #000;
+}
+input:required + span::after {
+    content: "*";
+    color: red;
+    position: absolute;
+    right: 0;
+    top: -3.6rem;
+}
+input:focus {
+    border: 1px solid yellow;
+    box-shadow: 3px 3px 7px 1px rgb(0, 0, 0, 0.2);
+}
+input:invalid {
+    border: 1px solid red;
+}
 button {
     align-self: flex-start;
     margin: 10px 0 0 5%;
